[package]
name = "rxp"
version = "0.2.0"
edition = "2021"
description = "A command-line utility to explore and test simple regular expressions"
license = "MIT"
homepage = "https://github.com/drivasperez/rxp"
repository = "https://github.com/drivasperez/rxp"
keywords = ["regex"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
unicode-segmentation = "1.7.1"
typed-arena = "2.0.1"
color-eyre = {version = "0.6", default-features = false }


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "test_nfa"
harness = false
